--- a/public/index.html
+++ b/public/index.html
@@ -356,7 +356,6 @@
       display: block;
     }
 
-    .aria-role__column-header,
     .aria-role__cell {
       background-color: hsl(var(--color), 80%, 97.5%);
 
@@ -382,15 +381,26 @@
 
     dialog table {
       border-collapse: collapse;
-      border-left: 1px solid;
-      border-top: 1px solid;
+      border: 1px solid hsl(var(--color), 80%, 22.5%);
+
+      @media print {
+        border-color: black;
+      }
     }
 
     dialog :is(td, th) {
       padding: 8px;
-      border-right: 1px solid;
-      border-bottom: 1px solid;
       text-align: left;
+    }
+
+    dialog th {
+      background: hsl(var(--color), 80%, 22.5%);
+      color: white;
+
+      @media print {
+        background: none;
+        color: black;
+      }
     }
 
     dialog table p {
