light style, eyebrow start

--- a/public/index.html
+++ b/public/index.html
@@ -461,7 +461,6 @@
     border: 1px solid;
     background: none;
     cursor: pointer;
-    color: var(--light-color);
     font: inherit;
     line-height: 1.75;
     height: 1.75rem;
@@ -470,6 +469,11 @@
     display: flex;
     place-items: center;
     place-content: center;
+    color: var(--light-color);
+
+    @media screen and (prefers-color-scheme: light) {
+      color: var(--dark-color);
+    }
   }
 
   .dialog__heading {
