--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,7 @@
   }
 
   :root {
+    font: -apply-system-body;
     font-family: system-ui, sans-serif;
 
     @media screen {
@@ -126,6 +127,9 @@
       margin: 0;
       background-color: var(--page-background-color);
       min-height: 100%;
+      -webkit-font-smoothing: antialiased;
+      -webkit-text-size-adjust: 100%;
+      -webkit-tap-highlight-color: transparent;
     }
 
     @media screen and (max-width: calc(48rem - 1px)) {
@@ -470,6 +474,7 @@
     place-items: center;
     place-content: center;
     color: var(--light-color);
+    aspect-ratio: 1;
 
     @media screen and (prefers-color-scheme: light) {
       color: var(--dark-color);
