--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
   :focus-visible {
     outline: 4px dashed white;
     outline-offset: 1px;
+
+    @media (prefers-color-scheme: light) {
+      outline: 4px dashed black;
+    }
   }
 
   dialog a:focus-visible {
