--- a/public/index.html
+++ b/public/index.html
@@ -470,7 +470,7 @@
   .dialog__close-button {
     margin: 0;
     padding: 0;
-    border: 1px solid;
+    border: 2px solid;
     background: none;
     cursor: pointer;
     font: inherit;
@@ -487,15 +487,25 @@
     @media screen and (prefers-color-scheme: light) {
       color: var(--dark-color);
     }
+
+    & svg {
+      stroke: currentColor;
+      stroke-width: 2px;
+    }
   }
 
   .dialog__header__info {
     @media screen {
       display: grid;
       gap: .5rem;
-      grid-template-rows: auto auto;
-      grid-template-columns: max-content 1fr;
       place-items: flex-start;
+    }
+  }
+
+  .dialog__eyebrows {
+    @media screen {
+      display: flex;
+      gap: .5rem;
     }
   }
 
@@ -503,8 +513,6 @@
     @media screen {
       margin: 0;
       font-size: 1.75rem;
-      grid-column-start: 1;
-      grid-column-end: 2;
     }
   }
 
@@ -515,11 +523,10 @@
       padding: .25rem .5rem;
       border-radius: .5rem;
       font-weight: bold;
-      grid-row: 1 / 2;
 
       @media screen and (prefers-color-scheme: light) {
         background-color: var(--dark-color);
-        color: var(--light-color);
+        color: var(--lightest-color);
       }
     }
   }
